tests/snapshots/compiler_error_fixtures/adversarial__common_dev_mistakes__CollectionsConfusion.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/adversarial/common_dev_mistakes/CollectionsConfusion.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `sum`.

  examples/compiler_errors/adversarial/common_dev_mistakes/CollectionsConfusion.flx:7:13
  |
7 |         sum([|1, 2, 3|])
  |             ^^^^^^^^^^^
  |             ----------- this argument has type `Array<Int>`

Note:
  expected argument type: List<Int>
  found argument type: Array<Int>
  the actual argument type is inferred from this expression

Help:
  Pass a `List<Int>` value as the 1st argument.
== stdout ==
<not executed>
