tests/snapshots/compiler_error_fixtures/adversarial__common_dev_mistakes__HiddenApi.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/adversarial/common_dev_mistakes/HiddenApi.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
