tests/snapshots/compiler_error_fixtures/adversarial__common_dev_mistakes__MissingPublicAccess.snap
---
source: tests/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/adversarial/common_dev_mistakes/MissingPublicAccess.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E011]: Private Member

Cannot access private member `secret`.

  examples/compiler_errors/adversarial/common_dev_mistakes/MissingPublicAccess.flx:5:9
  |
5 |         HiddenApi.secret()
  |         ^^^^^^^^^^^^^^^^

Hint:
  Private members can only be accessed within the same module. Use `public fn` to export a function.
== stdout ==
<not executed>
